--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     runtime-versions:
       nodejs: 20
-      docker: 20
+      docker: latest
 
     pre_build:
       commands:
