--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,17 +11,17 @@ phases:
       - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 852976468951.dkr.ecr.us-west-2.amazonaws.com
       - ECR_REPO="repo-tes-lks"
       - CONTAINER_NAME="express-app"
+      - ECR_URI="852976468951.dkr.ecr.us-west-2.amazonaws.com"
 
   build:
     commands:
       - docker build -t $ECR_REPO:latest .
-      - docker tag $ECR_REPO:latest alpine/express:latest
+      - docker tag $ECR_REPO:latest $ECR_URI/$ECR_REPO:latest
 
   post_build:
     commands:
       - printf '[{"name":"%s", "imageUri":"%s"}]' $CONTAINER_NAME $ECR_REPO:latest > imagedefinitions.json
-      - docker push $ECR_REPO:latest
-      - docker push alpine/express:latest
+      - docker push $ECR_URI/$ECR_REPO:latest
 
 artifacts:
   files:
